--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -17,9 +17,12 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Cache Docker layers
-      uses: docker/cache-action@v2
+      uses: actions/cache@v3
       with:
         path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -34,4 +37,3 @@ jobs:
     - name: Push Docker image
       run: |
         docker push xahidian/node-app:latest
-
